<resources>
    <string name="app_name">CO-DE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="job">Job</string>
    <string name="phone">Phone</string>
    <string name="national_id">National ID</string>
    <string name="login">login</string>
    <string name="sign_up">Sign up</string>
    <string name="profile">Profile</string>
    <string name="post">post</string>
    <string name="donation">Donation</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_name">user name</string>
    <string name="google_sign_up">google sign up</string>
    <string name="google_login">google login</string>
    <string name="sign_out">Sign out</string>
    <string name="add">Add</string>
    <string name="write_your_post">Write your post</string>
    <string name="add_post">add post</string>
    <string name="comment">comment</string>
    <string name="title">Title</string>
    <string name="hello_blank_fragment">hi</string>
    <string name="dateformat">yyyy-MMMM-dd hh:mm aaa</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="don_t_have_an_account">Don\'t have an account?    </string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="i_m_already_member">I\'m already member</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="read_more">Read more</string>
    <string name="home">Home</string>
    <string name="about">ABOUT</string>
    <string name="setting">Setting</string>
    <string name="my_posts">My Posts</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="temp">image</string>
    <string name="take_care">Take care</string>
    <string name="of_yourself">of yourself</string>
    <string name="user_image">user image</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="about_the_product">About The Product</string>
    <string name="start_test">start test</string>
    <string name="scan">scan</string>
    <string name="med_name">Med Name</string>

    <string name="send">send</string>
</resources>