<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.Profile">


        <androidx.cardview.widget.CardView
            android:id="@+id/profilePicCard"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:cardCornerRadius="125dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@color/black" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/profileImageChoose"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:background="@drawable/ic_camera"
            android:foreground="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="@+id/profilePicCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profilePicCard"
            app:layout_constraintVertical_bias="0.505" />

        <TextView
            android:id="@+id/profileUserName"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="24sp"
            android:textStyle="normal|bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/profilePicCard"
            app:layout_constraintStart_toStartOf="@+id/profilePicCard"
            app:layout_constraintTop_toBottomOf="@+id/profilePicCard"
            app:layout_constraintVertical_bias="0.073" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileUserName"
            app:layout_constraintVertical_bias="0.118">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabsetteings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_posts" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:layout_width="387dp"
            android:layout_height="300dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

            <LinearLayout
                android:id="@+id/profileabout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/job"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profileJob"
                        android:layout_width="246dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/job"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/national_id"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profileNatID"
                        android:layout_width="248dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/national_id"
                        android:textSize="24sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/profileRestPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/reset_password"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/profileSignout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/sign_out"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profilesettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/email"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="254dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textSize="24sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profileName"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textSize="24sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/address"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profileAddress"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/address"
                        android:textSize="24sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/phone"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/profilePhone"
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/phone"
                        android:textSize="24sp" />
                </LinearLayout>

            </LinearLayout>
        </FrameLayout>

        


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

